--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 
 <style>
     body {
-        background-color: #7e1d12;
+        background-color: #F4F8F1;
     }
 
     h1 {
-        color: #DAC09C;
+        color: #50150A;
     }
 
     .outline {
             fill: none;
-            stroke: #DAC09C;
+            stroke: #50150A;
             stroke-width: 1px;
         }
 </style>
@@ -25,7 +25,7 @@
 
 <body>
     <h1>INFO 3300 Project 2</h1>
-    <p style="color:#DAC09C"><strong>Group member:</strong> Xinyi Zhou(xz255)</p>
+    <p style="color:#50150A"><strong>Group member:</strong> Xinyi Zhou(xz255)</p>
 
     <!-- Create a svg for China map -->
     <div style="display: flex; flex-direction: row;">
