--- a/index.html
+++ b/index.html
@@ -8,33 +8,95 @@
 <style>
     body {
         background-color: #F4F8F1;
+        padding: 20px;
     }
 
     h1 {
-        color: #50150A;
+        color: #8A1D12;
+
     }
 
     .outline {
-            fill: none;
-            stroke: #50150A;
-            stroke-width: 1px;
-        }
+        fill: none;
+        stroke: #50150A;
+        stroke-width: 1px;
+    }
+
+    .topicButton {
+        margin-bottom: 15px;
+        width: 20%;
+        border: none;
+        background: #DC6142;
+        color: #F4F8F1;
+        position: relative;
+        padding: 0.6em;
+        font-weight: bold;
+        transition: 0.1s;
+        border-radius: 5px;
+        opacity: 0.7;
+        letter-spacing: 1px;
+        box-shadow: #c0392b 0px 6px 2px, #000000e0 0px 8px 5px;
+    }
+
+    .topicButton:hover {
+        background: #cb3e2e;
+        box-shadow: #aa3326 0px 6px 2px, #000000e0 0px 8px 5px;
+        opacity: 1;
+    }
+
+    .topicButton:active {
+        top: 2px;
+        box-shadow: #c0392b 0px 3px 2px, #000000e0 0px 3px 5px;
+        opacity: 1;
+    }
+
+    .topicButton.clicked {
+        background: #cb3e2e;
+        box-shadow: #aa3326 0px 6px 2px, #000000e0 0px 8px 5px;
+        opacity: 1;
+    }
+
+    .yearButton {
+        background: none;
+        border: none;
+    }
+
+    .yearButton:hover {
+        background: #DC6142;
+        border-radius: 5px;
+        box-shadow: #c0392b 0px 1px 2px;
+        color: #F4F8F1;
+    }
+
+    .yearButton.clicked {
+        background: #DC6142;
+        border-radius: 5px;
+        box-shadow: #c0392b 0px 1px 2px;
+        color: #F4F8F1;
+    }
 </style>
 
 </html>
 
 <body>
-    <h1>INFO 3300 Project 2</h1>
-    <p style="color:#50150A"><strong>Group member:</strong> Xinyi Zhou(xz255)</p>
+    <h1 style="display: flex; align-items: center; justify-content: center;">China’s Economic Pulse Over The Years</h1>
+    <p style="color:#50150A; display: flex; align-items: center; justify-content: center;"><strong>Group
+            member:</strong> Xinyi Zhou(xz255)</p>
 
     <!-- Create a svg for China map -->
     <div style="display: flex; flex-direction: row;">
-        <svg id="china" width="700" height="700" style="margin-left:50px;"></svg>
-        <div>
-            <div id="yearLine" style="height:2; background-color:#F4F8F1;"></div>
-            <div id="yearBar"></div>
+        <svg id="china" width="700" height="700" style="margin-left:30px;"></svg>
+        <div style="display: flex; flex-direction: column; margin-left: 50px;">
+            <div>
+                <div id="yearLine" style="height:2; background-color:#8A1D12; margin-top: 80px; margin-bottom: 10px;">
+                </div>
+                <div id="yearBar" style="display: flex; flex-direction: row; gap:10px"></div>
+            </div>
+            <p style="color:#8A1D12; margin-bottom: 5px; font-weight: bold; margin-top:30px; margin-bottom: 10px;
+                   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 
+                   Geneva, Verdana, sans-serif;">Data Topics</p>
+            <div id="topicButtons" style="display: flex; flex-direction: column;"></div>
         </div>
-        <div id="topicButtons"></div>
     </div>
     <script>
         const chinaMap = d3.select("#china");
@@ -62,7 +124,7 @@
             console.log(region);
 
             //Create a year list
-            const yearList = ["2010", "2011", "2012", "2013", "2014", "2015", "2016", "2017", "2018", "2019", "2020", "2021", "2022", "2023"]
+            const yearList = ["2013", "2014", "2015", "2016", "2017", "2018", "2019", "2020", "2021", "2022", "2023"]
             //Create a topic list
             const topicList = ["population", "GRP"]
 
@@ -102,25 +164,7 @@
             console.log(path)
 
 
-            chinaMapArea.selectAll("path.region").data(region.features)
-                .join("path")
-                .attr("class", "region")
-                .attr("d", path)
-                .style("fill", "lightgrey")
-                .on("mouseover", function (event, d) {
-                    d3.select(this).style("fill", "red");
-                    chinaMapArea.append("text")
-                        .attr("x", chinaMapWidth / 2)
-                        .attr("y", chinaMapHeight / 2)
-                        .attr("class", "regionText")
-                        .attr("color", "black")
-                        .text(regionList[d.index]);
-                })
-                .on("mouseout", function () {
-                    d3.select(this).style("fill", "lightgrey");
-                    chinaMapArea.selectAll(".regionText").remove();
-                });
-
+            //set default selectedYear and selectedTopic
             let selectedYear = "2020";
             let selectedTopic = "GRP";
 
@@ -148,7 +192,7 @@
 
                 const colorScale = d3.scaleQuantile()
                     .domain(extent)
-                    .range(["#bd0026", "#f03b20", "#fd8d3c", "#feb24c", "#fed976","#ffffb2"]);
+                    .range(["#bd0026", "#f03b20", "#fd8d3c", "#feb24c", "#fed976", "#ffffb2"]);
 
                 chinaMapArea.selectAll("path.topicPath")
                     .data(region.features)
@@ -162,7 +206,20 @@
                             return colorScale(regionData[selectedYear])
                         }
 
-                    });
+                    })
+                // .on("mouseover", function (event, d) {
+                //     d3.select(this).style("fill", "red");
+                //     chinaMapArea.append("text")
+                //         .attr("x", chinaMapWidth / 2)
+                //         .attr("y", chinaMapHeight / 2)
+                //         .attr("class", "regionText")
+                //         .attr("color", "black")
+                //         .text(regionList[d.index]);
+                // })
+                // .on("mouseout", function () {
+                //     d3.select(this).style("fill", "lightgrey");
+                //     chinaMapArea.selectAll(".regionText").remove();
+                // });;
             }
 
             function topicAnimated(topicKey) {
@@ -176,23 +233,49 @@
 
             }
 
+            let lastClickedYearButton = null;
             yearList.forEach(d => {
                 d3.select("#yearBar")
                     .append("button")
                     .text(d)
+                    .attr("class", "yearButton")
                     .on("click", function () {
+                        if (lastClickedYearButton != null) {
+                            d3.select(lastClickedYearButton).classed("clicked", false);
+                        }
+                        d3.select(this).classed("clicked", true);
+                        lastClickedYearButton = this;
                         yearBarsAnimated(d);
-                    })
+                    });
             });
+
+            let lastClickedTopicButton = null;
 
             topicList.forEach(d => {
                 d3.select("#topicButtons")
                     .append("button")
+                    .attr("class", "topicButton")
                     .text(d)
                     .on("click", function () {
+                        if (lastClickedTopicButton != null) {
+                            d3.select(lastClickedTopicButton).classed("clicked", false);
+                        }
+                        d3.select(this).classed("clicked", true);
+                        lastClickedTopicButton = this;
                         topicAnimated(d);
-                    })
+                    });
+
             })
+
+            //find the length of yearLine and buttons
+            const yearLineWidth = d3.select("#yearLine").node().offsetWidth;
+            console.log(yearLineWidth);
+            let buttonWidth=d3.select("#topicButtons").node().offsetWidth/yearList.length;
+            console.log("ButtonWidth"+buttonWidth);
+            //create linearScale for yearLine
+            const yearLineScale=d3.scaleLinear()
+                                  .domain([0,yearList.length])
+                                  .range([buttonWidth/2,yearLineWidth-buttonWidth/2])
 
             updateMapColors();
 
