--- a/index.html
+++ b/index.html
@@ -207,19 +207,22 @@
                         }
 
                     })
-                // .on("mouseover", function (event, d) {
-                //     d3.select(this).style("fill", "red");
-                //     chinaMapArea.append("text")
-                //         .attr("x", chinaMapWidth / 2)
-                //         .attr("y", chinaMapHeight / 2)
-                //         .attr("class", "regionText")
-                //         .attr("color", "black")
-                //         .text(regionList[d.index]);
-                // })
-                // .on("mouseout", function () {
-                //     d3.select(this).style("fill", "lightgrey");
-                //     chinaMapArea.selectAll(".regionText").remove();
-                // });;
+                .on("mouseover", function (event, d) {
+                    const originalColor = d3.select(this).style("fill");
+                    d3.select(this).attr("data-original-color", originalColor);
+                    d3.select(this).style("fill", "red");
+                    chinaMapArea.append("text")
+                        .attr("x", chinaMapWidth / 2)
+                        .attr("y", chinaMapHeight / 2)
+                        .attr("class", "regionText")
+                        .attr("color", "black")
+                        .text(regionList[d.index]);
+                })
+                .on("mouseout", function (event, d) {
+                    const originalColor = d3.select(this).attr("data-original-color");
+                    d3.select(this).style("fill", originalColor);
+                    chinaMapArea.selectAll(".regionText").remove();
+                });;
             }
 
             function topicAnimated(topicKey) {
