update group member names

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <body>
     <h1 style="display: flex; align-items: center; justify-content: center;">China’s Economic Pulse Over The Years</h1>
     <p style="color:#50150A; display: flex; align-items: center; justify-content: center;"><strong>Group
-            member:</strong> Xinyi Zhou(xz255)</p>
+            member:</strong> Xinyi Zhou(xz255) |</p>
 
     <!-- Create a svg for China map -->
     <div style="display: flex; flex-direction: row;">
