--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         align-items: center;
         justify-content: center;
         background-color: #DAC09C;
-        height: 120px;
-        width: 120px;
+        height: 150px;
+        width: 150px;
         border-radius: 100px;
         box-shadow: #000000e0 0px 3px 5px;
         opacity: 0.8;
@@ -100,6 +100,7 @@
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         color: black;
         font-size: 12px;
+        text-align: center;
     }
 
     .regionTitle {
@@ -107,13 +108,14 @@
         color: black;
         font-size: 20px;
         font-weight: bold;
+        text-align: center;
     }
 </style>
 
 </html>
 
 <body>
-    <h1 style="display: flex; align-items: center; justify-content: center;">China’s Economic Pulse Over The Years</h1>
+    <h1 style="display: flex; align-items: center; justify-content: center; font-size: 50px;">China’s Economic Pulse Over The Years</h1>
     <p style="color:#50150A; display: flex; align-items: center; justify-content: center;"><strong>Group
             member:</strong> Xinyi Zhou(xz255) |</p>
 
@@ -315,6 +317,12 @@
                         d3.select(".regionInfo").append("span")
                             .attr("class", "regionText")
                             .text(regionList[d.index]);
+
+                        d3.select(".regionInfo").append("span")
+                            .attr("class", "regionText")
+                            .style("font-weight","bold")
+                            .style("margin-top",5)
+                            .text(`${selectedTopic + ": "}`);
 
                         d3.select(".regionInfo").append("span")
                             .attr("class", "regionText")
