name and netID updated

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <h1 style="display: flex; align-items: center; justify-content: center; font-size: 50px;">China’s Economic Pulse
         Over The Years</h1>
     <p style="color:#50150A; display: flex; align-items: center; justify-content: center;"><strong>Group
-            member:</strong> Xinyi Zhou(xz255) |</p>
+            member:</strong> Xinyi Zhou(xz255) | Minghan Gao(mg2328) | Warren Hua(wsh48)</p>
 
     <!-- Create a svg for China map -->
     <div style="display: flex; flex-direction: row;">
