--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://d3js.org/topojson.v3.min.js"></script>
+    <meta charset="UTF-8">
 </head>
 
 <style>
